# Brain

./: .gitignore  CMakeLists.txt  DEMO_OUTPUT.md  IMPLEMENTATION_SUMMARY.md  MILESTONE_2_SUMMARY.md  README.md
_codeql_build_dir/: Makefile  pixel_world_sim
src/: main.cpp
src/ai/behavior/: BehaviorTreeBrain.cpp  BehaviorTreeBrain.h  Pathfinder.cpp  Pathfinder.h
src/ai/interface/: IBrain.cpp  IBrain.h
src/ai/memory/: NPCMemory.cpp  NPCMemory.h
src/ai/neural/: NeuralBrain.cpp  NeuralBrain.h
src/ai/social/: SocialIntelligence.cpp  SocialIntelligence.h
src/data/: DataLogger.cpp  DataLogger.h
src/engine/: GameEngine.cpp  GameEngine.h  Math.h  Types.h
src/entities/: NPC.cpp  NPC.h
src/input/: InputManager.cpp  InputManager.h
src/platform/: Window.cpp  Window.h
src/rendering/: Camera.cpp  Camera.h  DebugOverlay.cpp  DebugOverlay.h  Renderer.cpp  Renderer.h
src/world/: SimplexNoise.cpp  SimplexNoise.h  Tile.cpp  Tile.h  World.cpp  World.h
tools/: README.md  export_training_data.py  fine_tune_personality.py  model_architecture.py  requirements.txt  test_training.py  train_npc_brain.py
